--- a/Reaktor/Protokoll/RE_Protokoll_diskussion.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_diskussion.tex
@@ -1,2 +1,4 @@
-\section{Auswertung}
-
+\section{Zusammenfassung und Diskussion}
+	Im Experiment wurde sich mit den Grundlagen der Bedienung eines Kernreaktors vertraut gemacht. Dabei wurden zunächst die notwendigen einführenden Sicherheitsmaßnahmen zur Gewährleistung der nuklearen Sicherheit durchgeführt. Anschließend wurde die vorherrschende Dosisleistung an unterschiedlichen Orten und in Abhängigkeit der Reaktorleistung ermittelt. Dabei wurde das \textit{Abstandsquadratsgesetz} bestätigt, das heißt, dass die Dosisleistung mit dem Quadrat des Abstands zur Quelle sinkt (Abbildung \ref{df:neu_abstand}). Weiterhin wurde festgestellt, dass die Dosisleistung der Neutronen- und $\gamma$-Strahlung linear mit der Reaktorleistung zunimmt (Abbildungen \ref{p:dosi_neu} und \ref{p:dosi_gamma}). Die aufgenommenen Messdaten hätten verbessert werden können, indem man wesentlich mehr Messpunkte aufgenommen hätte.\\
+	Im zweiten Teil des Experimentes wurde eine Kalibrierung der Steuer- und Regeleinrichtungen am AKR über ein Kompensationsverfahren vorgenommen. Dafür wurde die Reaktorperiode ermittelt und mit Hilfe der Inhour-Gleichung (\ref{int:inhour}) die differentielle Reaktivität bestimmt. Mit Hilfe der daraus ableitbaren integralen Steuerstabkennlinie wurde die Überschussreaktivität des AKR-2 mit $ \rho_{\ddot{U}berschuss}  = (0,64 \pm 0,03)\ \unit{\$}$ quantifiziert. Da dieser Wert kleiner als $1\ \unit{\$}$ ist, kann weder durch technische noch durch personelle Fehler ein prompt überkritischer Reaktorzustand erreicht werden, weshalb das AKR als sehr sicherer Reaktor eingestuft werden kann. Der oben genannte Messwert könnte genauer ermittelt werden, indem man die Zeitmessung der Reaktorperiode entweder häufiger mit mehreren unabhängigen Stoppuhren vornimmt oder man die Messung der Verdopplungszeit automatisiert.\\
+	Im letzten Teil des Experiments wurde die Reaktivität einer Cadmium-Probe mit $\rho_{Cd}\prime = (0,13 \pm 0,02)\ \unit{\$}$ bestimmt. Da der ermittelte Wert aus der integralen Steuerstabkennlinie durch bloßes Ablesen extrahiert wurde, könnte die Genauigkeit erhöht werden, indem man diese numerisch fittet.
