--- a/Reaktor/Protokoll/RE_Protokoll_literatur.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_literatur.tex
@@ -1,6 +1,9 @@
 \begin{thebibliography}{99}
-\bibitem [01] {PA_alt} A.Jahn: Dosimetrie. Dresden,03/2008 
-\bibitem [02] {PA_neu} A.Jahn, C. Müller: Versuchsanleitung Grundpraktikum Dosimetrie. Dresden,03/2015
-\bibitem [03] {PA_RM1} PD Dr. J. Henniger; Dr. R. Schwierz; F. Hartung: Radiometrie 1 - Geiger-Müller-Zählrohr. Dresden,03/2015
+\bibitem [01] {stab} Technische Universität Dresden,  Institut für Energietechnik Ausbildungskernreaktor: \textit{Reaktorpraktikum Versuch "Steuerstabskalibrierung"}. Dresden, 05/2011 
+\bibitem [02] {start}Technische Universität Dresden,  Institut für Energietechnik Ausbildungskernreaktor: \textit{Reaktorpraktikum Versuch "Reaktorstart"}. Dresden, 05/2011
+\bibitem [03] {Wirkungsquerschnitt_Uran} A. Ganczarczyk: \textit{Physikalische Grundlagen der Energieumwandlung}. \texttt{https://www.uni-due.de}. Duisburg, 01/2006, zuletzt geöffnet: 10.01.2016
+\bibitem [04] {Flyer}Technische Universität Dresden, Institut für Energietechnik Ausbildungskernreaktor: \textit{Flyer Ausbildungskernreaktor}
+\bibitem [05] {Aufbau} Technische Universität Dresden, Institut für Energietechnik Ausbildungskernreaktor: \textit{Ausbildungskernreaktor AKR-2 Beschreibung des Aufbaus, der Funktionskontrolle und der Betriebsprotokollierung der Reaktoranlage AKR-2}. Dresden, 2005
 
 \end{thebibliography}
+
