--- a/Reaktor/Protokoll/RE_Protokoll_main.tex
+++ b/Reaktor/Protokoll/RE_Protokoll_main.tex
@@ -14,9 +14,11 @@
 \usepackage{units}
 \usepackage{multirow}
 \usepackage{subfigure}
+\usepackage{hyperref}
 
 \newcommand{\minipanf}{\begin{minipage}{\linewidth}}
 \newcommand{\minipend}{\end{minipage}}
+\newcommand{\abs}[1]{\ensuremath{\left\vert#1\right\vert}}
 
 \begin{document}
 
