--- a/Reaktor/Protokoll/pic/diffSSKL_all.tex
+++ b/Reaktor/Protokoll/pic/diffSSKL_all.tex
@@ -124,7 +124,7 @@
 	\color[rgb]{0,0,0}
 	\pgftext[center, base, at={\pgfpoint{328.22pt}{541.674pt}}]{\fontsize{15}{0}\selectfont{\textbf{Differentielle Steuerstabkennlinien}}}
 	\color[rgb]{0,0,0}
-	\pgftext[center, base, at={\pgfpoint{19.5731pt}{310.761pt}},rotate=90]{\fontsize{12}{0}\selectfont{$\mathrm{d} \rho / \mathrm{d}z\ [\unit{\$ /digit}]$}}
+	\pgftext[center, base, at={\pgfpoint{19.5731pt}{310.761pt}},rotate=90]{\fontsize{12}{0}\selectfont{$\Delta\rho\prime\ [\unit{\$}]$}}
 	\color[rgb]{0.129412,0.129412,0.129412}
 	\pgftext[center, base, at={\pgfpoint{45.5981pt}{193.122pt}}]{\fontsize{12}{0}\selectfont{0}}
 	\pgftext[center, base, at={\pgfpoint{37.5289pt}{254.853pt}}]{\fontsize{12}{0}\selectfont{0.02}}
